# chatter

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml  golden_words_featured.txt  golden_words_minimal.txt  justfile  rust-toolchain.toml
apps/chatter-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/chatter/: Cargo.toml  README.md
crates/chatter/src/: exit_codes.rs  main.rs  output.rs
crates/chatter/tests/: adjudication_tests.rs  appledouble_tests.rs  batch_tests.rs  cache_env_tests.rs  cache_tests.rs  command_execution_tests.rs  command_matrix_tests.rs  command_surface_manifest.rs  docs_sync.rs  holistic_judgment_cli.rs  holistic_pipeline_batch_cli.rs  integration_tests.rs  join_retrace_tests.rs  long_tier_no_crash.rs  long_tier_robustness_tests.rs  media_filename_match_tests.rs  merge_experimental_help_tests.rs  merge_tests.rs  parse_error_surfacing_tests.rs  phon_xtier_validation_tests.rs  pipeline_tests.rs  rediarize_tests.rs  sanity_scan_tests.rs  speaker_id_tests.rs  stack_limit_tests.rs  stateful_cli_integration.rs  update_command_tests.rs
crates/send2clan/: Cargo.toml  README.md
crates/send2clan/csrc/: send2clan.c
crates/send2clan/src/: error.rs  lib.rs  tests.rs
crates/talkbank-cache/: Cargo.toml  README.md
crates/talkbank-cache/src/: cache_impl.rs  cache_utils.rs  error.rs  init_lock.rs  lib.rs  roundtrip_ops.rs  rules_version.rs  trait_def.rs  validation_ops.rs
crates/talkbank-cache/tests/: concurrent_open.rs  concurrent_process_open.rs  rules_version_invalidation.rs
crates/talkbank-llm/: Cargo.toml
crates/talkbank-llm/src/: cache.rs  http_provider.rs  lib.rs
crates/talkbank-llm/tests/: cache_tests.rs  http_provider_tests.rs
crates/talkbank-lsp/: CLAUDE.md  Cargo.toml  DEBUGGING.md  README.md
crates/talkbank-lsp/queries/: highlights.scm
crates/talkbank-lsp/src/: highlight.rs  lib.rs  test_fixtures.rs
crates/talkbank-parser/: Cargo.toml  README.md
crates/talkbank-parser-re2c/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/talkbank-parser-re2c/benches/: parse_comparison.rs
crates/talkbank-parser-re2c/docs/: parity-report.md
crates/talkbank-parser-re2c/src/: ast.rs  chat_parser_impl.rs  error.rs  lexer.re  lib.rs  main.rs  token.rs
crates/talkbank-parser-re2c/tests/: categorize_divergences.rs  corpus_lex_tests.rs  equivalence_tests.rs  error_parity.rs  extract_fixtures.rs  fixture_utils.rs  full_corpus_parse_test.rs  golden_parse.rs  lexer_tests.rs  model_study.rs  parser_fixtures.rs  quick_divergence_check.rs  snapshot_tests.rs  subcategorize_main_tier.rs
crates/talkbank-parser-tests/: Cargo.toml  golden_words.txt  golden_words_featured.txt  golden_words_minimal.txt
crates/talkbank-parser-tests/clan-check-reference/: check-error-codes.json  check-error-codes.md  dead-codes.json  gui-vs-unix-check.md
crates/talkbank-parser-tests/examples/: compare_file.rs  gen_conformance_inventory.rs
crates/talkbank-parser-tests/src/: check_error_map.rs  conformance_inventory.rs  feature_signature.rs  generated_traversal.rs  lib.rs
crates/talkbank-parser-tests/tests/: check_validity_parity.rs  conformance_inventory_current.rs  dev_equivalence.rs  direct_parser_roundtrip_corpus.rs  error_coverage.rs  error_node_coverage.rs  error_words_validation.rs  generated.rs  generated_tests.rs  generated_traversal_conformance.rs  generated_traversal_current.rs  generated_traversal_parity.rs  golden_tiers_validation.rs  golden_words_validation.rs  offset_tests.rs  parse_chat_file_terminates.rs  parse_error_corpus.rs  parser_equivalence_files.rs  parser_equivalence_words.rs  phon_xtier_acceptance.rs  property_tests.rs  public_error_types.rs  roundtrip_reference_corpus.rs  validation_error_corpus.rs  visitor_slot_repeat_members.rs  warning_corpus.rs  wor_terminator_alignment.rs  xml_golden.rs  xml_schema_validate.rs
crates/talkbank-parser/benches/: parse.rs
crates/talkbank-parser/examples/: overlap_comma.rs
crates/talkbank-parser/src/: generated_traversal.rs  lib.rs  node_types.rs  tokens.rs
crates/talkbank-parser/tests/: context_public_api.rs  debug_roundtrip.rs  e203_invalid_form_marker_regression.rs  e207_filler_suggestion_test.rs  e208_empty_replacement_regression.rs  e245_stress_marker_regression.rs  e252_syllable_pause_at_word_start_regression.rs  error_messages_test.rs  header_dispatch_migration.rs  header_internals_migration.rs  header_separator_e758.rs  test_debug_error_group.rs  test_parse_health_recovery.rs  typed_full_document_recovery_routing.rs  visitor_contents_migration.rs  visitor_entrypoint_migration.rs  visitor_gem_header_internals.rs  visitor_gem_lazy_label.rs  visitor_gra_tier_migration.rs  visitor_header_dispatch_migration.rs  visitor_hidden_rule_inlining.rs  visitor_line_choice.rs  visitor_line_dispatch_migration.rs  visitor_main_tier_structure_migration.rs  visitor_mor_tier_migration.rs  visitor_pho_mod_tier_migration.rs  visitor_raw_user_tier_migration.rs  visitor_repeat_rule_contents.rs  visitor_repeat_slotting.rs  visitor_simple_header_internals.rs  visitor_sin_tier_migration.rs  visitor_special_header_internals.rs  visitor_structured_id.rs  visitor_structured_languages.rs  visitor_structured_media.rs  visitor_structured_participants.rs  visitor_structured_situation_types.rs  visitor_supertype_classify.rs  visitor_text_tier_migration.rs  visitor_utterance_dispatch_migration.rs  (+3 more)
crates/talkbank-transform/: Cargo.toml  README.md
crates/talkbank-transform/src/: adjudication.rs  capitalize.rs  dependent_tiers.rs  extract.rs  fix_s.rs  join_retrace.rs  json.rs  lib.rs  parse.rs  rediarize.rs  rendering.rs  (+4 more)
grammar/: .grammar-lint-config.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GRAMMAR.md  IMPROVEMENTS.md  Makefile  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
grammar/docs/: pre-coarsening-grammar.js.reference  precedence-decisions.md  structuring-opaque-tokens.md  tokenization-rules.md
grammar/src/: generated_symbol_sets.js  grammar.json  node-types.json  parser.c
(+1733 files in other folders)
