[package]
name = "tree-sitter-talkbank"
description = "Tree-sitter grammar for TalkBank CHAT transcripts"
version = "0.1.0"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "talkbank"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/TalkBank/chatter"
homepage = "https://talkbank.org"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
