[package]
name = "chatter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for TalkBank CHAT validation, conversion, and analysis"
readme = "README.md"
# Hold back crates.io publication until the Wave 1B binary/install contract lands.
publish = false

# `publish = false` hides this crate from cargo-dist's binary discovery,
# so opt the `chatter` binary back in explicitly. It is the single
# user-visible artifact for v0.1.0 (talkbank-lsp is dist-opted-out until
# standalone LSP distribution is set up).
[package.metadata.dist]
dist = true

[[bin]]
name = "chatter"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axoupdater = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
notify = { workspace = true }
ratatui = { workspace = true }
send2clan = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
talkbank-llm = { workspace = true }
talkbank-model = { workspace = true }
talkbank-parser-tests = { workspace = true }
talkbank-transform = { workspace = true }
talkbank-parser = { workspace = true }
thiserror = { workspace = true } #unified
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-width = { workspace = true }
walkdir = { workspace = true } #unified

[dev-dependencies]
assert_cmd = { workspace = true }
httpmock = "0.8.3"
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

# Panic-site audit completed 2026-04-29 (see
# `docs/panic-audit/chatter.md`). 14 non-test sites annotated.
[lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
unreachable   = "deny"
todo          = "deny"
unimplemented = "deny"
