[package]
name = "talkbank-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "OpenAI-compatible HTTP JudgmentProvider for talkbank-transform (the only network-dependent crate in the toolchain)"

[dependencies]
talkbank-transform = { workspace = true }
ureq = "3.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
httpmock = "0.8.3"
serde_json = { workspace = true }
tempfile = { workspace = true }
# The integration tests construct a JudgmentRequest, whose `anchor` field is a
# talkbank_model::SpeakerCode, so the test crate names talkbank-model directly.
talkbank-model = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# This crate is new: no legacy panic sites to grandfather, so the panic-discipline
# lints are denied outright (matching talkbank-cache, the other post-audit crate).
