[package]
name = "talkbank-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Canonical tree-sitter parser for TalkBank CHAT"
readme = "README.md"

[dependencies]
indexmap = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
talkbank-model = { workspace = true }
thiserror = { workspace = true } #unified
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-talkbank = { workspace = true }

[dev-dependencies]
talkbank-parser-tests = { workspace = true }
divan = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "parse"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# Panic-site audit completed 2026-04-29, zero non-test sites in
# this crate (see `docs/panic-audit/talkbank-parser.md`). `deny`
# prevents new sites without a deliberate `#[allow]` opt-in.
